debathena-reactivate (2.0.38) unstable; urgency=low

  * Ship a session wrapper that runs initgroups(3) and stop abusing sudo
    (Trac: #928)
  * Stop depending on kexec-tools, which hasn't been needed since 2.0.25
  * Wrap Depends line for easier reading

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 30 Jul 2012 14:44:14 -0400

debathena-reactivate (2.0.37) unstable; urgency=low

  * Set the time in reactivate, because NTP apparently can't (Trac: #749)
  * Implement a blacklist for services that should never start inside the
    chroot

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 09 Jul 2012 14:16:53 -0400

debathena-reactivate (2.0.36) unstable; urgency=low

  * Sigh.  Order matters in the mounts file because with the /run
    transition, /run/shm needs to get bind-mounted after /run, otherwise
    it ends up with the wrong mode bits.

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 05 Jul 2012 13:24:33 -0400

debathena-reactivate (2.0.35) unstable; urgency=low

  * Update debian/copyright for 3-clause BSD and one GPL'd file
  * Ship 16killprocs-no-really to end sessions faster (Trac: #775)
  * Use new lightdm-config hooks to actually run session setup and cleanup
  * Recover from a 'set -e' failure in snapshot-run and don't leave
    chroots lying around if possible
  * Avoid race conditions by inhibiting dbus-daemon-launch-helper during a
    chroot shutdown (Trac: #1052, probably)

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 03 Jul 2012 11:45:03 -0400

debathena-reactivate (2.0.34) unstable; urgency=low

  * dbus-daemon-launch-helper moved in precise
  * Bump Standards-Version

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 05 Jun 2012 17:03:44 -0400

debathena-reactivate (2.0.33) unstable; urgency=low

  * Actually install the diverted lightdm-session.debathena file

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 05 Jun 2012 13:52:59 -0400

debathena-reactivate (2.0.32) unstable; urgency=low

  * Remove unnecessary invocation of cp(1)
